player が 60 以下の場合(1カラム30名、且つ２カラム構成のPC画面)で、200個撃の場合、氏名が２段になる(フォントサイズやパディング)の問題を調整、暫定。

--- a/vpsc_100tg.html
+++ b/vpsc_100tg.html
@@ -478,7 +478,7 @@
                 displayEventInfo(combinedData.eventInfo);
                 displayDataInSections(combinedData.result, combinedData.eventInfo);
                 highlightRecentUpdates();
-              }).getvpStyleLarge(combinedData.eventInfo[0].件数);
+              }).getvpStyleLarge(combinedData.eventInfo[0].件数,combinedData.eventInfo[0].撃数);
             } else {
               clearEventInfo();
               console.log('S-LIVE: No event info to display.');
