--- a/vpsc_100tg.html
+++ b/vpsc_100tg.html
@@ -487,7 +487,7 @@
           .withFailureHandler(function(error) {
             console.error('S-LIVE: Error fetching server data: ' + error.message);
           })
-          .getCombinedData('<?= s ?>', '<?= sn ?>');
+          .getCombinedData('<?= s ?>', '<?= sn ?>', '<?= showTest ?>');
       }
       // 初回のデータ取得を実行し、その後nn秒ごとに繰り返す
       fetchData();
